test/spec_vectors/simd_splat/fail/module_2.wat
(module (func (result v128) i8x16.splat (i64.const 0)))